# eventor-api

./: .gitignore  LICENSE  README.md  pyproject.toml
eventor/: __init__.py  api.py  schemas.py
scripts/: vårcuppen.py
